# rustplex

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
rustplex-macros/: Cargo.toml
rustplex-macros/src/: expr.rs  lib.rs
src/: error.rs  lib.rs  prelude.rs
src/common/: expression.rs
src/core/: constraint.rs  expression.rs  model.rs  objective.rs  variable.rs
src/modeling/: constraint.rs  expression.rs  mod.rs  model.rs  objective.rs  variable.rs
src/simplex/: config.rs  mod.rs  solution.rs  solver.rs  status.rs
src/simplex/slack/: dict_entry.rs  dict_variable.rs  dictionary.rs  mod.rs
src/solver/: config.rs  mod.rs  solution.rs  status.rs
src/solver/branch_and_bound/: mod.rs
src/solver/simplex/: mod.rs  solution.rs  solver.rs
src/solver/simplex/slack/: dict_entry.rs  dict_variable.rs  dictionary.rs
src/solver/simplex/slack_dictionary/: mod.rs  row.rs  variable.rs
src/standard/: constraint.rs  mod.rs  model.rs  objective.rs  standardizer.rs  variable.rs
src/standard_form/: constraint.rs  mod.rs  model.rs  objective.rs  standardizer.rs  tests.rs  variable.rs
src/standardization/: mod.rs  standard_constraint.rs  standard_model.rs  standard_objective.rs  standard_variable.rs
tests/: api_ergonomics.rs  basics.rs  edge_cases.rs  expression_tests.rs  large_scale.rs  model_tests.rs  standard_datasets.rs  standardization_tests.rs  variable_tests.rs
tests/common/: mod.rs
