[package]
name = "rustplex"
version = "0.2.0"
edition = "2021"
rust-version = "1.62"
license = "MIT OR Apache-2.0"
description = "A linear programming solver based on the Simplex algorithm for Rust"
authors = ["Mohsen Pakzad <mohsen.pakzad99@gmail.com>"]
keywords = ["rustplex", "lp-solver", "linear-programming", "simplex"]
repository = "https://github.com/mohsenpakzad/rustplex"
readme = "README.md"

[dependencies]
slotmap = "1.1.1"
thiserror = "2.0.17"
